--- a/gradle.properties
+++ b/gradle.properties
@@ -27,14 +27,14 @@ mod_id=jeg
 # The human-readable display name for the mod.
 mod_name=Just Enough Guns
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
-mod_license=All Rights Reserved
+mod_license=GNU General Public License v2.0 only
 # The mod version. See https://semver.org/
-mod_version=0.14.0-1.21.8
+mod_version=1.0
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
 mod_group_id=ttv.migami.jeg
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=MigaMi
+mod_authors=Rui Mao, MigaMi
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=Port of Just Enough Guns to NeoForge 1.21.8.
